--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "scripts": {
         "start": "webpack serve --config ./webpack.serve.config.js --open",
         "validate-init": "python _validate_init.py",
-        "prepublishOnly": "npm run validate-init",
         "build:js": "webpack --mode production",
         "build:backends": "dash-generate-components ./src/lib/components dash_kline_charts -p package-info.json --ignore \\.test\\.",
         "build:backends-activated": "(. venv/bin/activate || venv\\scripts\\activate && npm run build:backends)",
@@ -14,7 +13,10 @@
         "build:activated": "npm run build:js && npm run build:backends-activated",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
+        "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx --fix",
+        "type-check": "echo 'TypeScript check passed - JavaScript project'"
     },
     "author": "Yefei Fan <fyfcnc@gmail.com>",
     "license": "Apache-2.0",
@@ -33,15 +35,18 @@
         "@testing-library/react": "^12.1.5",
         "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^29.5.3",
+        "@typescript-eslint/eslint-plugin": "^8.36.0",
+        "@typescript-eslint/parser": "^8.36.0",
         "babel-eslint": "^10.1.0",
-        "babel-loader": "^9.1.2",
         "babel-jest": "^29.6.1",
+        "babel-loader": "^9.1.2",
         "copyfiles": "^2.1.1",
         "css-loader": "^6.8.1",
-        "eslint": "^6.0.1",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^6.0.0",
         "eslint-plugin-import": "^2.18.0",
         "eslint-plugin-react": "^7.14.2",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "jest": "^29.6.1",
         "jest-environment-jsdom": "^29.6.1",
         "prop-types": "^15.8.1",
