--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "A Dash component for displaying financial charts using KLineChart"
 readme = "README.md"
 requires-python = ">=3.7"
-license = {text = "Apache-2.0"}
+license = "Apache-2.0"
 authors = [
     {name = "Yefei Fan", email = "fyfcnc@gmail.com"},
 ]
@@ -18,7 +18,6 @@ classifiers = [
     "Framework :: Dash",
     "Intended Audience :: Developers",
     "Intended Audience :: Financial and Insurance Industry",
-    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.7",
