--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,17 @@ build/
 
 # Python
 __pycache__/
-
-
+*.py[cod]
+*$py.class
+*.so
+*.egg
+*.egg-info/
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 # IDE
 .vscode/
